# y2k-lc3-tools

./: .gitattributes  .gitconfig  .pre-commit-config.yaml  README.md  experiment.ipynb  pyproject.toml
lc3-vm/: README.md
notebooks/: lc3.ipynb  sql.ipynb  sqlvm.ipynb
tests/: test_asm.py  test_vm.py
y2klc3tools/: __init__.py  asm.py  asm_test.py  disasm.py  pyvm.ipynb  pyvm.py  sql.ipynb  sqlvm.ipynb  sqlvm.py  sqlvm.sql  vm.py  vm_abc.py  vm_def.py  vm_test.py
