[tool.poetry]
name = "y2klc3tools"
version = "0.1.0"
description = ""
authors = ["y2k <git@y2kbugger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycparser = "^2.21"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pytest = "^7.4.3"
tabulate = "^0.9.0"
sqlparse = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
