[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "y2klc3tools"
version = "0.1.0"
description = ""
authors = ["y2k <git@y2kbugger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
tabulate = "^0.9.0"
sqlparse = "^0.5.0"
ipykernel = "*"
pytest = "*"
ruff = "*"
pycparser = "*"
ipywidgets = "*"
pre-commit = "*"

[tool.pytest.ini_options]
minversion = "8.0"
python_files = "*_test.py"
addopts = [
    ]
testpaths = ["y2klc3tools"]

[tool.ruff]
preview = true

# Exclude a variety of commonly ignored directories.
extend-exclude = [
]

# Same as Black.
line-length = 190
indent-width = 4

[tool.ruff.lint]
select = ["FIX", "TD", "F", "A", "COM", "B", "C4", "E", "U", "ERA", "W1", "W2", "I", "ANN001", "ANN201", "RUF100", "ICN", "SLF", "SIM","PTH","PD","RUF", "ASYNC"]
ignore = ["TD001", "TD002", "TD003", "SIM105", "PD901", "PD010", "FIX002", "COM812"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true
docstring-code-line-length = "dynamic"

quote-style = "preserve"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
